--- a/FTCollectorApp/App.xaml
+++ b/FTCollectorApp/App.xaml
@@ -6,7 +6,7 @@
         
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="FontSize" Value="Small" />
                 <Setter Property="BackgroundColor" Value="#1976D2" />
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="CornerRadius" Value="5" />
