--- a/FTCollectorApp/View/Utils/CameraViewPage.xaml
+++ b/FTCollectorApp/View/Utils/CameraViewPage.xaml
@@ -5,7 +5,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:FTCollectorApp.View.Utils"
     xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
-    
+    <NavigationPage.TitleView>
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Flash"></Label>
+        <Switch Margin="0,0,5,0"
+                            IsToggled="False"
+                            Toggled="FlashSwitch_Toggled" />
+            <Label Text="Front"/>
+            <Switch Margin="0,0,5,0"
+                            IsToggled="False"
+                            Toggled="FrontCameraSwitch_Toggled" />
+        </StackLayout>
+    </NavigationPage.TitleView>
     <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
         <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1">
             <xct:CameraView
@@ -115,7 +126,7 @@
             </StackLayout>
         </Grid>
     </ScrollView>-->
-            <StackLayout
+            <!--<StackLayout
             AbsoluteLayout.LayoutFlags="PositionProportional"  
             AbsoluteLayout.LayoutBounds=".40,.75,100,100"   
                         Margin="5"
@@ -125,7 +136,7 @@
                             IsToggled="False"
                             Toggled="FlashSwitch_Toggled" />
                 <Label Text="Flash" />
-            </StackLayout>
+            </StackLayout>-->
             <StackLayout 
             AbsoluteLayout.LayoutFlags="PositionProportional"  
             AbsoluteLayout.LayoutBounds=".20,.95,300,100"                   
@@ -142,7 +153,7 @@
                     Value="1" />
             </StackLayout>        
             
-            <StackLayout
+            <!--<StackLayout
                 AbsoluteLayout.LayoutFlags="PositionProportional"  
                 AbsoluteLayout.LayoutBounds=".20,.75,100,100"                  
                         Margin="5"
@@ -152,7 +163,7 @@
                             IsToggled="False"
                             Toggled="FrontCameraSwitch_Toggled" />
                 <Label Text="Front camera" />
-            </StackLayout>
+            </StackLayout>-->
             
             <ImageButton Source="cam_white.png" 
                          x:Name="doCameraThings"
