--- a/FTCollectorApp/View/SplashDownloadPage.xaml
+++ b/FTCollectorApp/View/SplashDownloadPage.xaml
@@ -5,45 +5,45 @@
              NavigationPage.HasNavigationBar="False"
              >
     <ContentPage.Content>
-        <StackLayout VerticalOptions="CenterAndExpand" Margin="10">
-            <Image Source="logo.png" HorizontalOptions="Center"/>
-            <StackLayout IsVisible="{Binding IsBusy}" Padding="12"
+        <StackLayout VerticalOptions="FillAndExpand" Margin="10">
+            <StackLayout VerticalOptions="CenterAndExpand" Margin="10">
+                <Image Source="logo.png" HorizontalOptions="Center"/>
+                <StackLayout IsVisible="{Binding IsBusy}" Padding="12"
                  AbsoluteLayout.LayoutFlags="PositionProportional"
                  AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
-
-                <ActivityIndicator IsRunning="{Binding IsBusy}"  Color="Orange" />
-
-
-                <Label x:Name ="txtLoading" Text="Downloading..." HorizontalOptions="Center" TextColor="White"/>
-
+                    <ActivityIndicator IsRunning="{Binding IsBusy}"  Color="Orange" />
+                    <Label x:Name ="txtLoading" Text="Downloading..." HorizontalOptions="Center" TextColor="Black"/>
+                </StackLayout>
+                <Button Text="Login" IsVisible="{Binding IsBusy}" HorizontalOptions="Center" Clicked="LoginClicked">
+                    <Button.Triggers>
+                        <DataTrigger TargetType="Button"
+                    Binding="{Binding IsBusy}"
+                    Value="True">
+                            <Setter Property="IsVisible" Value="False" />
+                        </DataTrigger>
+                    </Button.Triggers>
+                </Button>
+                <Button Text="Retry Download" HorizontalOptions="Center" BackgroundColor="Green" Clicked="RetryClicked">
+                    <Button.Triggers>
+                        <DataTrigger TargetType="Button"
+                    Binding="{Binding IsBusy}"
+                    Value="True">
+                            <Setter Property="IsVisible" Value="False" />
+                        </DataTrigger>
+                    </Button.Triggers>
+                </Button>
+                <Button Text="Pending Upload Page" HorizontalOptions="Center" Clicked="PendingUploadClicked">
+                    <Button.Triggers>
+                        <DataTrigger TargetType="Button"
+                    Binding="{Binding IsBusy}"
+                    Value="True">
+                            <Setter Property="IsVisible" Value="False" />
+                        </DataTrigger>
+                    </Button.Triggers>
+                </Button>
             </StackLayout>
-            <Button Text="Login" IsVisible="{Binding IsBusy}" HorizontalOptions="Center" Clicked="LoginClicked">
-                <Button.Triggers>
-                    <DataTrigger TargetType="Button"
-                    Binding="{Binding IsBusy}"
-                    Value="True">
-                        <Setter Property="IsVisible" Value="False" />
-                    </DataTrigger>
-                </Button.Triggers>
-            </Button>
-            <Button Text="Retry Download" HorizontalOptions="Center" BackgroundColor="Green" Clicked="RetryClicked">
-                <Button.Triggers>
-                    <DataTrigger TargetType="Button"
-                    Binding="{Binding IsBusy}"
-                    Value="True">
-                        <Setter Property="IsVisible" Value="False" />
-                    </DataTrigger>
-                </Button.Triggers>
-            </Button>
-            <Button Text="Pending Upload Page" HorizontalOptions="Center" Clicked="PendingUploadClicked">
-                <Button.Triggers>
-                    <DataTrigger TargetType="Button"
-                    Binding="{Binding IsBusy}"
-                    Value="True">
-                        <Setter Property="IsVisible" Value="False" />
-                    </DataTrigger>
-                </Button.Triggers>
-            </Button>           
+            <Label VerticalOptions="End" HorizontalOptions="Center" Text="v0321"/>
         </StackLayout>
+        
     </ContentPage.Content>
 </ContentPage>
