--- a/FTCollectorApp/View/GpsDevicePopUpView.xaml
+++ b/FTCollectorApp/View/GpsDevicePopUpView.xaml
@@ -16,7 +16,7 @@
         <Label x:Name="txtAccuracy" FontSize="Medium"/>
         <Label x:Name="txtCoords" FontSize="Medium"/>        
 
-        <RadioButton x:Name="deviceChecked" IsChecked="True" Content="Phone's GPS" CheckedChanged="DeviceChecked"/>
+        <RadioButton x:Name="deviceChecked" Content="Phone's GPS" CheckedChanged="DeviceChecked"/>
         <RadioButton x:Name="externalChecked"  Content="Trimble" CheckedChanged="ExternalChecked"/>
         <RadioButton x:Name ="btnNoGPS" Content="Manual input" CheckedChanged="NoGPSChecked"/>
         <Label IsVisible="{Binding Source={x:Reference Name=btnNoGPS},Path=IsChecked }" FontSize="Medium"
@@ -25,35 +25,7 @@
         <local:BorderEntry x:Name="entryLon" Keyboard="Numeric" IsVisible="{Binding Source={x:Reference Name=btnNoGPS}, Path=IsChecked }" Placeholder="Longitude" Text=""/>
         <Button x:Name="btnSave" Text="Save" BackgroundColor="{StaticResource blueColor}" 
                 Clicked="btnSave_Clicked">
-           <Button.Triggers>
-                <!--<MultiTrigger TargetType="Button">
-                    <MultiTrigger.Conditions>
-                        <BindingCondition Binding="{Binding Source={x:Reference entryLat},
-                                   Path=Text.Length}"
-                               Value="0" />
-                        <BindingCondition Binding="{Binding Source={x:Reference entryLon},
-                                   Path=Text.Length}"
-                               Value="0" />
-                        <BindingCondition Binding="{Binding Source={x:Reference deviceChecked},
-                                   Path=IsChecked}"
-                               Value="true" />
-                        <BindingCondition Binding="{Binding Source={x:Reference externalChecked},
-                                   Path=IsChecked}"
-                               Value="true" />                        
-                    </MultiTrigger.Conditions>
-                    <Setter Property="IsEnabled" Value="False" />
-                    <Setter Property="BackgroundColor" Value="Gray"/>
-                </MultiTrigger>-->
-                
-                <!--<DataTrigger TargetType="Button"
-                    Binding="{Binding Source={x:Reference entryLat},
-                                    Path=Text.Length}"
-                    Value="0">
-                    <Setter Property="IsEnabled" Value="False" />
-                    <Setter Property="BackgroundColor" Value="Gray"/>
-                </DataTrigger>-->
-            </Button.Triggers>       
-            
+
         </Button>
         <ActivityIndicator VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" IsVisible="{Binding isBusy}" IsRunning="{Binding isBusy}"/>
 
